--- a/snake/Snake.htm
+++ b/snake/Snake.htm
@@ -29,7 +29,7 @@ input{
 	background-image: url("img/apple.png");
 }
 .lastAppleElem{
-	background-image: url("img/lastApple.png");
+	background-image: url("img/LastApple.png");
 }
 .speedAppleElem{
 	background-image: url("img/speedApple.png");
