--- a/WaterBattle/index.html
+++ b/WaterBattle/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <table id="area"></table>
+    <div id="caption">
+
+    </div>
 <script src="js/main.js"></script>
 </body>
 </html>
