--- a/WaterBattle/index.html
+++ b/WaterBattle/index.html
@@ -9,7 +9,12 @@
     <title>WaterBattle</title>
 </head>
 <body>
-    <table id="area"></table>
+	<div class="controls">
+		<button id="btnStart" class="btn__start btn btn__theme-standart">Start</button>
+	</div>
+	<div id="gameArea">
+		
+	</div>
     <div id="caption">
 
     </div>
