--- a/WaterBattle/index.html
+++ b/WaterBattle/index.html
@@ -11,6 +11,12 @@
 <body>
 	<div class="controls">
 		<button id="btnStart" class="btn__start btn btn__theme-standart">Start</button>
+        <span>сложность</span>
+        <select name="" id="select">
+            <option value="">Легко</option>
+            <option value="">Средне</option>
+            <option value="">Сложно</option>
+        </select>
 	</div>
 	<div id="gameArea">
 		
