--- a/JSONPlaceholder/index.html
+++ b/JSONPlaceholder/index.html
@@ -12,11 +12,12 @@
 <div class="content">
     <div class="content-left">
         <h1 class="content__title">Posts</h1>
-        <div id="left-posts-box" class="posts-box">
+        <div id="left-posts-box" class="left-posts-box posts-box">
         </div>
+        <button class="content-left__btn-showmore btn">Show more</button>
     </div>
     <div class="content-right">
-        <h1 class="content__title">saved posts</h1>
+        <h1 class="content__title">Saved posts</h1>
         <div id="right-posts-box" class="content-right__posts-box posts-box">
         </div>
     </div>
