--- a/WaterBattle/index.html
+++ b/WaterBattle/index.html
@@ -18,12 +18,7 @@
             <option value="">Сложно</option>
         </select>
 	</div>
-	<div id="gameArea">
-		
-	</div>
-    <div id="caption">
-
-    </div>
+	<div id="gameArea"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
