--- a/googlePage/index.html
+++ b/googlePage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=1200">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
@@ -34,7 +34,7 @@
     <img src="img/main-logo.png" width="272" height="92"/>
     <form action="" class="logo-container__search-form">
         <div class="search-form">
-            <div id="search-form__search-box" class="search-form__search-box" tabindex="-1">
+            <div id="search-form__search-box" class="search-form__search-box">
                 <input type="text" id="search-form__input" class="input__theme_search-form" autocomplete="off">
                 <div class="search-form__input-btns">
                     <div class="search-form__input-img search-form__keyboard" title="Экранная клавиатура"></div>
