--- a/DropCards/index.html
+++ b/DropCards/index.html
@@ -7,14 +7,23 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="container">
+	<div id="container" class="container">
 		<div id="card-wrapper" class="cards-wrapper">
 
 		</div>
 	</div>
 	<template id="cardTemplate">
 		<div class="card">
-			<h2>БУМ БУМ СВАЙП</h2>
+			<div class="card__title"></div>
+		</div>
+	</template>
+	<template id="card__finish">
+		<div class="card__finish">
+			<img src="" alt="">
+			<div class="card__title"></div>
+			<form action="">
+
+			</form>
 		</div>
 	</template>
 	<script src="js/main.js"></script>
